dont reponsive student user ui

--- a/assets/css/student-user-style.css
+++ b/assets/css/student-user-style.css
@@ -301,6 +301,7 @@ b {
     align-items: flex-end;
     border-bottom: 1px solid var(--color-dark-variant);
     padding-bottom: 5px;
+    position: relative;
 }
 
 .office-container .office-top-container .nav-middle-container a:hover {
@@ -473,6 +474,22 @@ span.title {
     right: 0;
     cursor: pointer;
     padding: 10px;
+}
+
+button#open-change-profile {
+    color: white;
+    background: var(--color-primary-variant);
+    padding: 5px 12px;
+    border-radius: 3px;
+    margin-top: 10px;
+    transition: all 200ms ease;
+    cursor: pointer;
+    display: none;
+}
+
+button#open-change-profile:active {
+    background: var(--color-primary);
+
 }
 
 .form .checkbox-text{
@@ -1034,6 +1051,99 @@ input[type='file']{
     #navtop-menu {
         display: block;
         cursor: pointer;
+    }
+
+    .office-main-container .first-div-container
+    div h3 {
+        font-size: 20px !important;
+        font-weight: 600;
+    }
+
+    .student-profile-container .profile-top-container {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        align-items: center;
+        border: none;
+        padding-bottom: 5px;
+    }
+
+    .profile-top-container .student-image img {
+        max-width: 150px;
+        width: 100%;
+        aspect-ratio : 1 / 1;
+        border-radius: 50%;
+        object-fit: cover;
+        object-position: center;
+        border: 1px solid var(--color-dark-variant);
+    }
+
+    .profile-top-container .name-student h1 {
+        font-size: 20px !important;
+        font-weight: 600 !important;
+        text-align: center;
+    }
+
+    .profile-top-container .name-student h3 {
+        font-size: 12px !important;
+        font-weight: 500 !important;
+        text-align: center;
+    }
+
+    button#open-change-profile {
+        display: block;
+    }
+
+    .upload-profile-pic {
+        display: none;
+        flex-direction: column;
+        gap: 20px;
+        margin-left: auto;
+        position: absolute;
+        bottom: -130px;
+        background: var(--color-info-dark);
+        box-shadow: var(--box-shadow);
+        transition: all 200ms ease;
+        padding: 20px;
+    }
+
+    .upload-profile-pic.active {
+        display: flex;
+    }
+
+    .upload-profile-pic label {
+        display: none;
+    }
+
+    .profile-main-info-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+        padding: 10px 20px;
+        background: var(--color-white);
+    }
+
+    .student-data-container h3,
+    .student-data-container h4 {
+        font-size: 12px;
+    }
+    
+    .office-main-container {
+        margin-top: -25px;
+    }
+
+    .office-main-container .first-div-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        gap: 50px;
+        padding: 10px 0px 0px 0px;
+        border-radius: var(--border-radius-1);
+    }
+
+    .student-profile-container {
+        gap: 10px;
     }
 }
 
