--- a/assets/css/office-admin-style.css
+++ b/assets/css/office-admin-style.css
@@ -1099,3 +1099,91 @@ button {
 }
 
 /* end of tabs */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* REPORTS */
+
+
+.image-back {
+    position: fixed;
+    width: 100%;
+    z-index: -1;
+}
+
+.blur {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    background: linear-gradient(0deg, #0522B3 13.95%, rgba(217, 217, 217, 0) 117.86%);
+    mix-blend-mode: multiply;
+}
+
+.select-report-container {
+    padding: 30px 0px;
+    min-height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0px 4px 15px 0px #0000000F;
+    position: fixed;
+    top: 30%;
+    left: 0;
+    right: 0;
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(78, 78, 78, 0.2);
+    justify-content: center;
+}
+
+.report-form-container {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    gap:30px;
+    align-items: center;
+}
+
+.report-form-container label {
+    font-size: 30px;
+    background: none;
+}
+
+.report-form-container select {
+    font-size: 24px;
+
+}
+
+.select-report-container form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    height: 100%;
+}
+
+.select-report-container input[type="submit"] {
+    font-size: 24px;
+    background: var(--color-warning);
+    color: white;
+    border-radius: 3px;
+    padding: 5px 10px;
+}
