--- a/assets/css/office-admin-style.css
+++ b/assets/css/office-admin-style.css
@@ -1122,7 +1122,8 @@ button {
 
 .image-back {
     position: fixed;
-    width: 100%;
+    width: 50%;
+    left: 100px;
     z-index: -1;
 }
 
@@ -1132,7 +1133,7 @@ button {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: -1;
+    z-index: 1;
     background: linear-gradient(0deg, #0522B3 13.95%, rgba(217, 217, 217, 0) 117.86%);
     mix-blend-mode: multiply;
 }
