--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1945,7 +1945,8 @@ main table tbody tr td:last-child input, main table tbody tr td:last-child butto
 
 .image-back {
     position: fixed;
-    width: 100%;
+    
+    left: 250px;
     z-index: -1;
 }
 
@@ -1953,7 +1954,7 @@ main table tbody tr td:last-child input, main table tbody tr td:last-child butto
     position: fixed;
     top: 0;
     bottom: 0;
-    left: 0;
+    left: 250px;
     right: 0;
     z-index: -1;
     background: linear-gradient(0deg, #0522B3 13.95%, rgba(217, 217, 217, 0) 117.86%);
@@ -1969,7 +1970,7 @@ main table tbody tr td:last-child input, main table tbody tr td:last-child butto
     box-shadow: 0px 4px 15px 0px #0000000F;
     position: fixed;
     top: 30%;
-    left: 0;
+    left: 250px;
     right: 0;
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.3);
