--- a/assets/css/office-admin-style.css
+++ b/assets/css/office-admin-style.css
@@ -1130,8 +1130,7 @@ button {
 
 .image-back {
     position: fixed;
-    width: 50%;
-    left: 100px;
+    width: 100%;
     z-index: -1;
 }
 
@@ -1161,6 +1160,7 @@ button {
     border: 1px solid rgba(255, 255, 255, 0.3);
     background: rgba(78, 78, 78, 0.2);
     justify-content: center;
+    z-index: 500;
 }
 
 .report-form-container {
