--- a/assets/css/office-admin-style.css
+++ b/assets/css/office-admin-style.css
@@ -1269,3 +1269,80 @@ button {
     opacity: 1;
     pointer-events: all;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* report */
+
+.reports-page-body {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.reports-page-body .reports-main-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#print-reports-button {
+    align-self: flex-end;
+    background: var(--color-primary-variant);
+    color: white;
+    padding: 10px 20px;
+    margin-bottom: -15px;
+    cursor: pointer;
+}
+
+.canvas-container {
+    padding: 20px;
+    background: var(--color-white);
+}
+
+.canvas-container canvas {
+    min-height: 300px;
+}
+
+.reports-tables-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.report-table-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.report-table-container table {
+    width: 100%;
+    margin-top: 10px;
+}
+
+.report-table-container {
+    background: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--border-radius-1);
+    box-shadow: var(--box-shadow);
+    transition: all 200ms ease;
+    width: 100%;
+}
