--- a/assets/css/office-admin-style.css
+++ b/assets/css/office-admin-style.css
@@ -234,9 +234,14 @@ a.active {
     gap: 10px;
 }
 
+.office-container .office-top-container 
+.nav-right-container .profile .info {
+    text-align: right;
+}
+
 .main-requirements-container {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1500px;
     display: flex;
     flex-direction: column;
 }
@@ -393,6 +398,12 @@ button span {
 .input-field-container {
     display: grid;
     grid-template-columns: 3fr 2fr 2fr;
+    gap: 20px;
+}
+
+.input-field-container2 {
+    display: grid;
+    grid-template-columns: 4fr 3fr;
     gap: 20px;
 }
 
@@ -563,7 +574,7 @@ button span {
 
 .office-main-container {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1500px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -728,16 +739,19 @@ button span {
     gap: 10px;
 }
 
-.clearance-detail-container .clearance-detail-right .clearance-detail-right-title {
+.clearance-detail-container .clearance-detail-right 
+.clearance-detail-right-title {
     padding-bottom: 5px;
 }
 
-.clearance-detail-container .clearance-detail-right .clearance-detail-right-main-content {
+.clearance-detail-container .clearance-detail-right 
+.clearance-detail-right-main-content {
     padding-left: 10px;
     width: 100%;
 }
 
-.clearance-detail-container .clearance-detail-right .clearance-detail-right-main-content table {
+.clearance-detail-container .clearance-detail-right 
+.clearance-detail-right-main-content table {
     width: 100%;
 }
 
@@ -855,11 +869,12 @@ button {
 .table-container table#example {
     text-align: center;
     border-collapse: collapse;
-
+    
 }
 
 .table-container table#example thead tr th {
     padding-bottom: 10px;
+    text-align: center;
 }
 
 .get-started-section {
