--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2214,3 +2214,11 @@ button.download-csv {
 .input-warning.active {
     display: block;
 }
+
+
+
+table.dataTable tfoot tr th select {
+    appearance: auto;
+    border: 1px solid rgb(118, 118, 118);
+    
+} 
