--- a/assets/css/office-admin-style.css
+++ b/assets/css/office-admin-style.css
@@ -936,6 +936,23 @@ button {
     transition: all 200ms ease;
 }
 
+.create-requirements {
+    background: rgb(40, 17, 134);
+    color: white !important;
+    padding: 8px 15px;
+    border-radius: 3px;
+    transition: all 200ms ease;
+}
+
+.create-clearance {
+    background: rgb(17, 134, 17);
+    color: white !important;
+    padding: 8px 15px;
+    border-radius: 3px;
+    transition: all 200ms ease;
+    align-self: flex-end;
+}
+
 .get-started-title {
     text-align: center;
 }
@@ -1272,7 +1289,7 @@ button {
     border: 1px solid black;
     border-radius: 10px;
     z-index: 300;
-    background-color: white;
+    background-color: var(--color-background);
     width: 800px;
     max-width: 80%;
 }
@@ -1314,6 +1331,19 @@ button {
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+
+.requirements-modal-body .input {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.requirements-modal-body .input
+select {
+    padding: 10px;
+    cursor: pointer;
+    border: 1px solid var(--color-dark);
 }
 
 #overlay {
