--- a/assets/css/office-admin-style.css
+++ b/assets/css/office-admin-style.css
@@ -292,6 +292,16 @@ a.active {
     flex-direction: column;
 }
 
+.forms {
+    width: 100%;
+    padding: 15px 30px 30px 30px;
+    background-color: var(--color-white);
+    transition:all 200ms ease;
+    box-shadow: var(--box-shadow);
+    display: flex;
+    flex-direction: column;
+}
+
 .form table {
     text-align: center;
 }
